--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -3,7 +3,7 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11763603.md#1" target="_blank">重庆元旦着火高楼涉神秘发展商</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11763603.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/p2564081a942833309-ss-150x120.jpg" align ="left"></a>2020元旦，重庆一幢高楼发生大火，被称作2020第一把火。引起外界关注的是，相关屋苑的发展商——神秘富豪张松桥。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 12:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11762158.md#1" target="_blank">4.7亿美元假耐克鞋入美 华人作案手法曝光</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11762158.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/6ad4bbed0a0e451affeea6273ec55c75-150x120.jpg" align ="left"></a>根据网站Quartz在2020年1月1日报导，一个出口假冒运动鞋到美国的团伙，利用伪造文书、虚假电邮和一次性电话，将假冒耐克、路易斯威登等品牌的鞋子，运到美国。根据联邦起诉书，几年来多宗案子涉及的总金额高达4.72亿美元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 12:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11762029.md#1" target="_blank">新年北京昌平强拆 百余村民上访遭威胁</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11762029.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/page-150x120.jpg" align ="left"></a>2020年新年前后，天寒地冻之时，北京市昌平区政府对多地进行断电、逼迁强拆。十三陵镇果庄村百余村民和产业房业户于2019年12月30日上午10时许，到北京市信访办上访，不但遭到政府截访威胁扣留，手机还被查抄并设置监控，村民对外集体被噤声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 8:11 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11761587.md#1" target="_blank">红歌代替儿歌 大陆幼童也要表示效忠</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11761587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/kindergarten-150x120.jpg" align ="left"></a>儿歌变“红歌”，中国大陆幼稚园被强制要求幼童宣誓效忠中共及国家领导人，而红色教育成为必修课，有被洗脑幼童称要“拿枪去打日本佬”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11761587.md#1" target="_blank">红歌代替儿歌 大陆幼童也要宣示效忠</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11761587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/kindergarten-150x120.jpg" align ="left"></a>儿歌变“红歌”，中国大陆幼稚园被强制要求幼童宣誓效忠中共及国家领导人，而红色教育成为必修课，有被洗脑幼童称要“拿枪去打日本佬”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11761208.md#1" target="_blank">中国高速省界收费站取消首日 现大堵车</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11761208.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/7ce1d949e5fbace52207c716f6afa7df-150x120.jpg" align ="left"></a>中共当局取消高速公路省界（人工）收费站并网切换之后，电子收费系统反而造成各地大规模交通拥堵现象。另据车主们反馈，收费站取消后缴纳费用反而涨幅惊人，甚至令部分货车主计划卖车。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11761329.md#1" target="_blank">大陆火车票抢票软件赛黄牛党 收费藏猫腻</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11761329.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/12306-150x120.jpg" align ="left"></a>“到底哪款应用能帮我抢到票？”这是每年过年“回乡潮”来袭的必考题，但无论哪款软件，最终都要在12306购票系统排队，加速包只是提高了抢票成功的概率，并不能保证一定抢到票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 7:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11761168.md#1" target="_blank">疑挖煤掏空地下 山西40多户房屋突现裂缝</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11761168.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/bkn-20200102013431208-0102_00952_001_01p-150x120.jpg" align ="left"></a>山西晋城市一条在建隧道12月30日发生坍塌，造成6人死亡，官方暂未公布原因。前一天在附近的村庄内，逾40户房屋出现大裂缝，高速路面凸起和出现裂缝。当地村民已搬离，怀疑与附近开采煤矿有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 4:25 AM							</td></tr>
