--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,7 +30,7 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/kuujke2745/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11776033.md#1">蔡英文竞选广告对比港台 触动人心网络疯传</a><br>
+<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11776033.md#1">蔡英文竞选广告对比港台 触动人心网络广传</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772761.md#1">围绕习在修例事件中的责任 两种声音针锋相对</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11776943.md#1">林郑政府日子难熬 新上任区议员拒配合</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11775943.md#1">【翻墙必看】网民曝芮成钢在监狱近况</a><br>
