--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -14,7 +14,7 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11767739.md#1" target="_blank">韩国棉花糖女孩 分享蜕变成正妹过程和秘诀</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11767739.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/53c48d431a5e9da76d1debae457e626f-150x120.jpg" align ="left"></a>大家都知道减重是一件多么艰难的事；一位在南韩 经营服饰的网路正妹，在她的IG上分享了自己读高中时的照片，两相比照之下落差相当大，让网友为之哗然，没想到苗条秀丽的她，以前竟然是肉肉、圆圆的棉花糖胖妹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 10:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/3/n11765400.md#1" target="_blank">长发公主真人版 180公分长发正妹揭护发秘诀</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/3/n11765400.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/dcc809c6366fbf4520098ea46964f413-150x120.jpg" align ="left"></a>被称为现代真人版的“长发公主”，住在乌克兰34岁的阿琳娜?克拉夫琴科（Alena Kravchenko），因为拥有一头长达6英尺（1.8米）的美丽金发，而成为一名热门网红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 10:43 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11773142.md#1" target="_blank">糖让你体内发炎、免疫下降！简单4招成功戒糖</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11773142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/cut-down-sugar_730747618-150x120.jpg" align ="left"></a>糖瘾的常见症状包括：短期记忆力差、静不下来、失眠、忧郁焦虑、嘴馋——你可有似曾相识的感受？当体内糖分过多，容易造成发炎、免疫系统损伤，甚至增加癌症风险。戒糖可以帮助身体恢复平衡，让你的身体发生巨大变化。如何戒糖？1. 早餐大改造。早餐吃甜的，绝对会让你一整天都想吃糖。如果你想吃甜的，那就替换为有天然甜味的食物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 2:43 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11762783.md#1" target="_blank">爱猫失踪6年在圣诞节找到 主人流泪：这是奇迹！</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11762783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2ce316d5b17cddb02445a709399c0f2f-150x120.jpg" align ="left"></a>一只失踪6年、今年19岁高龄的老猫，在圣誔节前夕回到主人的怀抱中，本以为已经永远失去它的主人，高兴得感动流泪，并称这是一个圣誔奇迹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 2:19 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11762783.md#1" target="_blank">爱猫失踪6年在圣诞节找到 主人流泪：这是奇迹！</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11762783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2ce316d5b17cddb02445a709399c0f2f-150x120.jpg" align ="left"></a>一只失踪6年、今年19岁高龄的老猫，在圣诞节前夕回到主人的怀抱中，本以为已经永远失去它的主人，高兴得感动流泪，并称这是一个圣诞奇迹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 2:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11762860.md#1" target="_blank">3岁姊姊第一次见妹妹 深情告白：从此不让你离开</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11762860.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/24fdcc75e2afd314cf42786f54a5b4c5-150x120.jpg" align ="left"></a>可记得第一次见到刚生出来的弟妹时，家中的孩子或自己做何反应？美国一个3岁的小姊姊第一次见到妹妹，不但温柔地把妹妹紧抱在怀中，更说了一句极深情、窝心的告白；让很多网友看得暖呼呼的，直呼这是见过最甜蜜的姊姊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 2:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11773584.md#1" target="_blank">善用收纳小巧思  浴室舒适度大提升</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11773584.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e759e72a8b1df9_ttl7daycGF_shutterstock_784953103-150x120.jpg" align ="left"></a>很多人觉得浴室的配置，只要简单就可以，不需要花太多心思。然而，我们不一定每天使用厨房、客厅或其他空间，但却一定会使用浴室。只要花点小巧思，就可以让浴室整齐明亮，慰劳自己一整天的辛苦与劳碌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 1:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11773663.md#1" target="_blank">如何清洗羽绒衣？清洁烘干技巧大公开</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11773663.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/03/shutterstock_719425375-150x120.jpg" align ="left"></a>正确清洗羽绒衣，比想像中更简单。只要用对方法，清洗起来一点也不费劲，很快就可让衣物恢复干净蓬松。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 1:42 PM			</td></tr>
