--- a/gb/ncid277_4.md
+++ b/gb/ncid277_4.md
@@ -31,7 +31,7 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11756102.md#1" target="_blank">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11756102.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1709140247431758-150x120.jpg" align ="left"></a>中国外交部发言人耿爽的对外发言被外界认为千篇一律、套话连篇，以至于有网友根据一款“耿爽模拟器”便可获得他的外交辞令内容。不过，网友今日发现发现，该模拟器已被下架。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 3:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11756006.md#1" target="_blank">总统辩论会 蔡英文读港人来信：不要相信中共</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11756006.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/4c18dd8c429eb600747e4fe07ebd8649-150x120.jpg" align ="left"></a>在台湾的总统辩论会上，蔡英文读了香港一名青年的来信，呼吁台湾人“不要相信中共”。中共长期欺骗国人、国际社会的丑闻，再次被外界聚焦。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 3:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11755082.md#1" target="_blank">中共恐吓教师校长 港教育界将举行集会回击</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11755082.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1908170417372188-150x120.jpg" align ="left"></a>近日香港的教育局长杨润雄声称，如果学校不配合教育局调查有关教师在反修例运动中的所谓违法行为，校长将被取消资格。引起舆论极大反弹，被指散步新一轮白色恐布。香港教育界将于元月3日办集会抵御白色恐怖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 3:26 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11759917.md#1" target="_blank">安徽省委巡视组前副组长被判刑10年半</a><br></h3>2019年12月31日，中共安徽省委第七巡视组前副组长胡洪涛犯受贿罪被判刑10年半。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 3:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11755956.md#1" target="_blank">中共网控再升级  制作及转发视频要实名制</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11755956.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/GettyImages-691039068-150x120.jpg" align ="left"></a>近日，中共网信办等部门再通过法规，对网络视频、网络直播等节目的发布和传播加以限制和严控，包括对发布者要求“实名制”，利用身份信息认证。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 2:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11757436.md#1" target="_blank">涉权钱色交易 内蒙古前常委云光中被逮捕</a><br></h3>12月31日，中共内蒙古自治区党委前常委、呼和浩特市委前书记云光中以涉嫌“受贿罪”被逮捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 5:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11754952.md#1" target="_blank">赖中强：反渗透法处罚拿中共钱介选的人</a><br></h3>民进党力拼反渗透法草案31日通过。多个公民团体30日到立法院前表达支持反渗透法，并呼吁立法应更严谨、周延。经济民主连合召集人赖中强指出，反渗透法处罚的是拿中共钱办事，介入台湾民主选举的人。如果只是到中国交流、参加活动，没拿中共的钱接受中共指令介入选举，完全不需要担心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11756598.md#1" target="_blank">中国工程院院士李宁受审 贪污经费3756万</a><br></h3>12月30日，曾是大陆最年轻中国工程院院士的中国农业大学生物学院教授李宁及张磊贪污案在吉林松原开庭审理。李被指伙同他人贪污经费3756万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 11:12 AM							</td></tr>
