--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <br><p><a href="https://github.com/kuujke2745/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777869.md#1">周晓辉：伊朗报复美国雷声大 中俄动作频频</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777810.md#1">颜丹：人均一万美元与人手一张选票的价值</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777757.md#1">张菁：大陆离婚率高启 半边天思想是根源</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/1/n11760806.md#1">为中共效力的红色特工 后来怎么样了（3）</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11775166.md#1">周晓辉：习近平警告王沪宁 断舍离是根本</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11774385.md#1">横河：从萨斯到武汉肺炎面面观</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11774233.md#1">张林：北京风声鹤唳 草木皆兵</a><br>
-<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11774165.md#1">袁斌：中国历史老师特有的困境和耻辱</a><br>
 <br><p><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/kuujke2745/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777875.md#1">加拿大华裔富豪遭分尸 华人圈问题曝光</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777351.md#1">【独家】专访郑文杰：西九龙被捕 遭粗暴对待（二）</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777731.md#1">含塑化剂致儿童性早熟 大陆名厂童鞋下架</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777760.md#1">川普证实伊朗攻击无美军伤亡</a><br>
@@ -37,11 +38,10 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777568.md#1">王立强遭死亡威胁 被要求撤回对中共指控</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777493.md#1">开年A股日日现闪崩  港中资金融股8日普跌</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777661.md#1">伊朗“放空枪” 陆网友热议：可拿影帝</a><br>
-<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777589.md#1">川普发表伊朗袭击全国讲话 六大看点抢先看</a><br>
+<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777589.md#1">川普发表伊朗袭击全国讲话 六大看点一览</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777500.md#1">大陆猪肉价同比涨159.7% 分析：年后暴涨</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播预告】决战2020 台湾总统大选</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777394.md#1">【直播回放】伊朗袭美基地 川普讲话化干戈</a><br>
-<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11776033.md#1">蔡英文竞选广告对比港台 触动人心网络广传</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777357.md#1">伊朗空袭美军和联军基地 引发国际谴责</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772761.md#1">围绕习在修例事件中的责任 两种声音针锋相对</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11776943.md#1">林郑政府日子难熬 新上任区议员拒配合</a><br>
