--- a/gb/ncid278_4.md
+++ b/gb/ncid278_4.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/18/n11730907.md#1" target="_blank">【新闻看点】港漂建反送中平台 大陆人力挺</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/18/n11730907.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1906261028231528-150x120.jpg" align ="left"></a>中共深深忧惧，香港的消息如果进入大陆，可能会造成蝴蝶效应。所以中共一方面屏蔽香港的真实消息，一方面在加紧审查大陆人的相关言论。但是民意无所不在，如同香港人水一般的抗争，不为暴力所阻，“抽刀断水水更流”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 4:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/18/n11731125.md#1" target="_blank">河北蠡县三任派出所所长壮年暴死</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/18/n11731125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1410140122312483-150x120.jpg" align ="left"></a>自1999到2011年，河北省蠡县鲍墟乡有三任派出所所长，外加一个副乡长壮年暴死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/18/n11730768.md#1" target="_blank">复旦大学改章程删自由 学生集体唱校歌抗议</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/18/n11730768.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fudan-150x120.jpg" align ="left"></a>复旦大学大幅度阉割章程在社会上引发争议，也在复旦师生中引发不满可以抗议。有学生自发合唱校歌之行为，对校方拟修改大学章程的计划表示抗议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:43 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/22/n11738747.md#1" target="_blank">密山市委前副书记李连春回国投案 被起诉</a><br></h3>近日，中共媒体报导，2019年9月24日，外逃职务犯罪嫌疑人李连春主动回国投案，并已退出大部分贪污所得赃款。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 3:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/18/n11730369.md#1" target="_blank">累陷冤狱8年 法轮功学员王怀富遭迫害离世</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/18/n11730369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-11-150x120.jpg" align ="left"></a>四川绵阳市法轮功学员王怀富被中共非法关押8次，被迫害累计8年半，最后被嘉州监狱注射大量不明药物，奄奄一息回家。2019年7月16日，王怀富含冤离世，终年71岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 11:22 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/22/n11738464.md#1" target="_blank">内蒙古赤峰至少31名法轮功学员身陷囹圄</a><br></h3>2019年年末，赤峰地区至少有30名法轮功学员被非法关押在内蒙古赤峰第四监狱和内蒙古呼市女子监狱遭受迫害，还有一人不知被转到哪所监狱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 10:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/21/n11737459.md#1" target="_blank">超时加班和抑郁 长安福特30岁工程师跳楼亡</a><br></h3>12月20日，一条题为《长安福特AE工程师之死》的文章在网上广泛传播。文章作者称自己的丈夫邓某某为长安福特汽车有限公司一名工程师，入职8年，由于工作压力大，持续加班患上抑郁症，年仅30岁抑郁跳楼身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/21/n11736771.md#1" target="_blank">四川轻化工大学副教授因言受罚</a><br></h3>中国大专院校学术自由空间持续萎缩。四川轻化工大学副教授李志被指发表不当言论，违反了高校教师准则，近期受到校方行政处罚，并被调离其所任职的马克思主义学院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:46 PM							</td></tr>
