--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,17 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770899.md#1" target="_blank">大陆又一平台爆雷 涉资千亿 近二百万人受害</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770899.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/IMG_5395-150x120.jpg" align ="left"></a>近来，大陆普顿PTFX外汇平台崩盘的消息，震动了整个外汇圈。据悉，该平台涉及资金近千亿人民币，200多万投资者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 5:15 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771337.md#1" target="_blank">受降雪影响 大陆131条高速135个路段封闭</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771337.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1191956262-150x120.jpg" align ="left"></a>1月6日，因降雪影响，大陆131条高速135个路段封闭，波及北京、天津、河北、山西、陕西、内蒙古。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 4:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771579.md#1" target="_blank">武汉不明肺炎延烧 泰国菲律宾加强检测旅客</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771579.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-150x120.jpg" align ="left"></a>武汉不明肺炎疫情持续扩散，为此亚洲各国均采取因应措施。泰国疾病管制局和泰国机场公司合作在机场加装红外线温度扫描机，并加强对来自中国武汉的旅客检查措施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 3:39 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770622.md#1" target="_blank">【内幕】谍影重重 中共利用赴美游客窃密</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770622.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1125947391-150x120.jpg" align ="left"></a>2019年6月28日，中国公民李青山（Qingshan Li，音译）乘坐飞机降落在南加州，他持旅游签证赴美，原定于10天后返国，但他最终在美国被逮捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 2:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771567.md#1" target="_blank">陆搬家公司不让澳记者带走地球仪 原因荒谬</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771567.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_69075566_Subscription_L-150x120.jpg" align ="left"></a>澳洲一名记者结束在中国的工作，准备搬家回国，但搬家公司不让她带走一个地球仪，只因为地球仪上标示台北和北京的字体一样大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 2:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771039.md#1" target="_blank">南阳地震是模拟地震？ 网友疑与石油勘测有关</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771039.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/4b2c241065020360c2f889562da42585-150x120.jpg" align ="left"></a>1月6日凌晨2时，河南南阳市新野县（疑爆）发生2.1级地震，震源深度0千米。有网民质疑与石油勘测有关。但中共南阳市应急管理局称此次疑爆系相关部门模拟地震行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 1:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770942.md#1" target="_blank">北京最大积雪8厘米 105航班取消高速路封闭</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770942.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1191956262-150x120.jpg" align ="left"></a>1月6日，北京因降雪影响，首都机场取消105架次航班，首都机场省际巴士全部线路停运，京津城际、京沪、京张、京广等高铁线路降速运行，京藏、京承、首环等十条高速部分路段临时封闭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 12:28 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770615.md#1" target="_blank">【拍案惊奇】解密：苏莱曼尼之死与美伊战争</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770615.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NF0C3-1-600x400-1-150x120.jpg" align ="left"></a>这个周末，发生的事件比较多  包括美国跟伊朗之间的紧张对峙，武汉肺炎继续蔓延，中联办主任王志民被撤换，等等。每一件事细谈起来都很长，我们今天先聚焦在美伊对峙。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 11:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770292.md#1" target="_blank">苏州十全街发生大面积塌陷 店铺已搬空</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770292.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shijie-150x120.jpg" align ="left"></a>1月4日下午，苏州知名的十全街突然发生大面积地面塌陷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770074.md#1" target="_blank">整顿港澳系统 张晓明或是下一个？</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770074.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/130716094605100590-150x120.jpg" align ="left"></a>北京周六（1月4日）突然宣布撤换中联办主任王志民，由65岁的财经委副主任委骆惠宁接任。有多名政界中人指出，相信骆只是过渡性人物，此次任免或是中共整顿港澳系统的开始。港澳办主任张晓明，很有可能是下一个被撤换的人；至于特首林郑月娥，亦官位难保。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/28/n11751179.md#1" target="_blank">安徽合肥三位医护人员经历的残酷迫害</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/28/n11751179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-22-150x120.jpg" align ="left"></a>在中共对法轮功持续20年的迫害中，不计其数的法轮功学员因为不放弃修炼，惨遭中共的迫害，身心受到巨大的伤害，甚至失去生命。本文所讲述的安徽省合肥地区三位修炼法轮功的医护人员的遭遇，只是无数法轮功学员被迫害事实的冰山一角。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:04 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/28/n11751497.md#1" target="_blank">法轮功学员柳德玉遭范家台监狱迫害致肺结核</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/28/n11751497.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2010-12-3-minghui-persecution-shayang1-150x120.jpg" align ="left"></a>湖北省荆门市法轮功学员柳德玉于2018年10月被劫持到湖北沙洋范家台监狱，因坚持信仰，被迫害得骨瘦如柴，患了肺结核，现一直在沙洋监狱住院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 9:50 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770375.md#1" target="_blank">山东维权人士在美遭中共威胁 其父国内被拘</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Iq9RdkRd-150x120.jpg" align ="left"></a>周四（1月2日），山东维权人士界立建的父亲突遭县国保抓捕、羞辱，被拘留。此前，界立建收到来自中共人士的威胁电话，他对中共这种不人道的无耻行径表示谴责，呼吁外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770649.md#1" target="_blank">大陆网友填歌赞川普：全世界的好公仆</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770649.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1189870194-150x120.jpg" align ="left"></a>美国总统川普（特朗普）授命美军击毙伊朗恐怖分子头目索莱马尼（Qassim Soleimani），不少带网友发声表支持，甚至传唱歌曲赞川普，但很快被删除。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770031.md#1" target="_blank">获悉陈豪刚从武汉返港 李佳芯活动上大惊失色</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770031.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/180425074841100311-150x120.jpg" align ="left"></a>刚从爆发不明肺炎的湖北武汉返家的港星陈豪，4日晚与李佳芯（Ali）一同应邀参加香港的慈善活动。被问到会否担心被传染病症时，Ali表示：“怕啊！”被工作人员要求合照时，李佳芯背对陈豪保持距离。而当陈豪手搭Ali肩膀时，Ali搞笑喊道：“我是来做慈善的，不要传染（病毒）给我啊！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770148.md#1" target="_blank">范冰冰亮相美食节 遇见人生中两位重要人物</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770148.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-957419286-150x120.jpg" align ="left"></a>1月4日，大陆女星范冰冰身着青绿色的杉装、搭配一条粉色的羽毛披风亮相某美食节。不过，活动的焦点并不是范冰冰清新时尚的服装，而是她遇见了人生中的两位重要人物——电影导演李玉和王小帅。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:27 AM							</td></tr>
@@ -26,7 +13,30 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770034.md#1" target="_blank">电梯失灵不停 贵阳女抱娃从27楼直降负1楼</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/c1fc-imrkkfx7800189-150x120.jpg" align ="left"></a>1月3日下午，贵阳的段女士带着1岁多的孩子乘坐电梯回家时，电梯突然失灵，直接从27楼下降到负一楼！对此，厂商回应称：正常现象。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 11:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769876.md#1" target="_blank">武汉疫情病增至59例 密切接触者163名</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769876.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1881582-150x120.jpg" align ="left"></a>武汉官方称，爆发的“不明原因的病毒性肺炎”病例暴增至59例，有163名密切接触者被追踪；病原已排除传染性非典型肺炎（SARS）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 11:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769940.md#1" target="_blank">柬埔寨施工饭店倒塌 至少36死23伤</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769940.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NF7RK-150x120.jpg" align ="left"></a>周五（1月3日），在柬埔寨海边省份白马（Kep）,一栋正在施工中的七层饭店楼倒塌。目前，已造成36人死亡，23人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 11:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771280.md#1" target="_blank">【唐靖远快评】中联办突换人 骆惠宁上任3特别</a><br></h3>观众朋友大家好，今天是1月4日，星期六。去年底由于休假，暂停了一期热点互动快评，今天再次回来做节目，已经是新年过后，虽然有点晚了，还是要给朋友们道声新年快乐，恭祝大家新年新气象，财运步步高。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 3:35 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/24/n11741772.md#1" target="_blank">中共行事没规矩 专家：贸易战逼其就范</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/24/n11741772.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Qingdao-port-1142161134-for-Selling-821-and-BW-652-150x120.jpg" align ="left"></a>2019年圣诞前夕，美中宣布达成第一阶段贸易协议，中方将购买更多美国农产品，有分析认为这是给美国农民的圣诞礼物。但多位专家学者认为，贸易战醉翁之意不在酒，在于让中共守规矩。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 10:09 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769805.md#1" target="_blank">受贿近2千万 吉林前反贪局局长获刑8年</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769805.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8d9c43a80859d143432be41b6574195d-150x120.jpg" align ="left"></a>1月5日，中共通化市中级法院微信公众号消息指，去年最后一天（2019年12月31日），中共吉林省检察院前副检察长、前反贪局局长吴长智因受贿罪被判处有期徒刑8年，罚款200万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:58 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769668.md#1" target="_blank">近百名区议员公开表示拒出席张建宗见面会</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769668.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6f9a453de05fc_ttl7dayphq_IMG_0240-150x120.jpeg" align ="left"></a>1月4日，公民党全体区议员公开表示将拒绝出席张建宗主持的单向式训话场合，同时要求政府官员应邀出席各个区议会的会议，接受区议员质询。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 7:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769412.md#1" target="_blank">无锡访民联署“给黄钦书记的公开信”</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769412.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/e269c8c8ced63b0e542a3e28dbbd17d0-150x120.jpg" align ="left"></a>2019年岁末，无锡市二十多名非法强拆的受害者正在联署“给黄钦书记的公开信”，呼吁黄钦将他们的冤屈加以改正，并返还他们的土地、财产，让他们得以安居乐业的生活。
+
+公开信由无锡陶国芬发起，截至目前已有蒋子春、周荣清、毛黎惠、黄菡清…等二十六人签名联署支持。目前联署活动还在进行中。
+给新市委书记黄钦的公开信
+公开信讲述他们因被非法强拆，财产被抢劫一空，无.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:45 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769044.md#1" target="_blank">武汉不明肺炎快速蔓延 香港再增6宗病例</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769044.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages22-1881582-150x120.jpg" align ="left"></a>湖北武汉“不明原因肺炎”持续蔓延，香港再新增6宗曾经到武汉，返港后出现肺炎等症状的病例。截止1月5日，香港累计病例达到14宗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770245.md#1" target="_blank">河南新野县疑发生爆炸 引发2.1级地震</a><br></h3>据中国地震台网测定，1月6日凌晨2时在河南南阳市新野县（北纬32.45度，东经112.50度）发生2.1级地震（疑爆），震源深度0千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 3:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/22/n11738876.md#1" target="_blank">被打残 辽宁法轮功学员李亚君再遭迫害</a><br></h3>10年前在拘留所被打残的凌源法轮功学员李亚君于2019年7月5日，被凌源市国保警察连抬带拽塞进轿车，送到朝阳市看守所，被拒收。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 10:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11768620.md#1" target="_blank">【翻墙必看】恐怖组织头子被击毙细节曝光</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
+
+1.伊朗将军被击毙细节：最后36小时露行踪
+伊朗第二号实权人物卡西姆?索莱马尼（Qassim Suleimani，又译苏雷曼尼）被美国无人机炸死。索莱马尼生前行事隐秘，美方是如何对他进行监控获得他的行踪，最终对他进行精准打击的呢？
+
+2.港中联办主任遭撤换 新任骆惠宁有三大特点
+在反送中运动进行得如火如荼之.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 9:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769782.md#1" target="_blank">四川广安空货车与小客车相撞 致4人死亡</a><br></h3>1月5日下午，四川广安区广恒快速通道大龙场镇路段发生一起道路交通事故，导致4人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769646.md#1" target="_blank">香港怀疑武汉肺炎案至16例 最小病人2岁</a><br></h3>湖北武汉不明肺炎病例在当地暴增并延烧至香港。在过去24小时内，新增8宗曾经到武汉，返港后出现肺炎等症状的病例。怀疑个案从14例增至16例。最小的病人只有2岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:08 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769311.md#1" target="_blank">新年刚过 陕西连发两起杀人案 致4死1伤</a><br></h3>2020年新年刚过，陕西传出两起杀人案。1月2日，陕西西安市第66中学女教师周某娟被高三学生李某伤害致死。1月4日，汉中市宁强县，男子徐某林将王某、雷某杰杀死，将9岁女童王某彤致伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769417.md#1" target="_blank">因应武汉肺炎 香港启动“严重应变级别”</a><br></h3>武汉爆发疑似萨斯疫情，大陆社交媒体疯传后官方再补发公告，短短三天个案从27例飙升44例。香港近期到过武汉后发热、呼吸道感染及肺炎症状入院治疗有8人。港澳应对升级，香港启动“严重应变级别”。专家批北京政府处理失当，后果严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11768943.md#1" target="_blank">安徽淮南男子杀害女友藏尸行李箱 被判死刑</a><br></h3>近日，安徽淮南男子刘某杀害女友藏尸行李箱一案宣判，刘某一审被判处死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:55 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11768961.md#1" target="_blank">广东新生女婴被装袋挂公厕门把手 父母失踪</a><br></h3>1月1日，广东省梅州市一个公厕里，有民众发现厕所的门把手上挂着一袋东西，里面竟装着一个熟睡的小女婴。袋中还有一件成人衣服，但没有任何关于女婴信息的字条。经检查，女婴没有任何异常，身体也无畸形情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 3:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11768891.md#1" target="_blank">四川青样一住宅天然气泄漏起火 地面都震动</a><br></h3>1月4日深夜，四川成都青羊区一住宅小区天然气泄漏起火，并伴随爆炸声，导致1人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 2:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kuujke2745/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kuujke2745/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
