--- a/gb/ncid277_2.md
+++ b/gb/ncid277_2.md
@@ -25,7 +25,7 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11768055.md#1" target="_blank">川普击毙伊朗二号人物 对中共释何种信号</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11768055.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NF0C5-150x120.jpg" align ="left"></a>美军击毙伊朗将军卡西姆?苏莱曼尼（Qasem Soleimani），中国专家说，美国此举向伊朗的主要盟友北京政权发出强烈信号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11768058.md#1" target="_blank">习近平谈中共领导人更替 接班人制再引关注</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11768058.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509082158042039-150x120.jpg" align ="left"></a>近期，习近平本人谈到中共“国家领导层”的更替问题，立即引发关注。因为中共接班人一直是外界关注的焦点，也是中共权斗的风向标。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11768034.md#1" target="_blank">美摄影教授被拒入境香港 曾拍摄抗议照片</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11768034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/02/130909110856100311-150x120.jpg" align ="left"></a>周四（1月2日），美国一所大学的摄影教授被拒绝入境香港。这名教授去年曾在香港报导抗议活动，且曾香港警察逮捕，但不久后被释放。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 1:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11768022.md#1" target="_blank">港中联办主任遭撤换 新任骆惠宁有三大特点</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11768022.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/190721150739100615-150x120.jpg" align ="left"></a>在反送中运动进行得如火如荼之际，香港中联办主任被撤换，刚刚退居二线的骆惠宁接替王志民，出任中联办主任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 1:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11773543.md#1" target="_blank">前河南政法委书记吴天君之子获刑二年</a><br></h3>中共河南省前政法委书记吴天君在获刑两年多后，其子吴建业因受贿罪，在2019年11月7日被判处有期徒刑2年，缓刑3年，并处罚金20万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770883.md#1" target="_blank">【翻墙必看】分析：王志民突然被撤职内幕</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
 1.内幕：王志民为何被撤 港共系统面临清洗
