--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,11 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2009-11-29-twpaizhi-1-150x120.jpg" align ="left"></a>一本书能挽救人的性命，一本书能改变人的命运，一本书能让社会风气回归纯朴，人世间是什么书能有如此神奇力量？在中共统治下的中国大陆，这本书被列为禁书，但他却以46种文字在全球一百多个国家和地区发行，成为被译成外文最多的中文书，受各族裔推崇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11773276.md#1" target="_blank">新年首周 深圳国资曝5000万债务违约</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11773276.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1074345276-150x120.jpg" align ="left"></a>2020年新年伊始，深圳国资委下属金融机构曝出5000万债券违约。该笔债券的投资方是小型民企，但融资关系复杂，涉及数家国资背景公司和金融机构。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 8:09 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772547.md#1" target="_blank">中共奥威尔式维稳 学者：今年只能往下走</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772547.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/dbbc6582496e17cf5d10be0614bfb62d-150x120.jpg" align ="left"></a>政大东亚所与中共研究社6日举办“2019年中国大陆情势总结与未来发展趋势观察”论坛，政大名誉教授丁树范认为，中共扩张受国际抵制，对内高压极权也被外界质疑，加上中国经济相当不乐观，因此，推测2020年，中共将从把重心从“对外”转回“对内”政局、经济社会等各方面的稳定政策上。在社会面向，政大东亚所副教授王韵则表示，中共“越维稳越不稳”，接下来（2020年）中共“.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 7:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772769.md#1" target="_blank">艺人郑敬基：感恩收到老婆送的黄色手机</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772769.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/VCG111173366627_meitu_1-150x120.jpg" align ="left"></a>由香港民间发起的“黄色经济圈”，近来成为反修例运动的热门关键词。6日，香港艺人郑敬基在Instagram（IG）晒出其老婆送的一只黄色外壳的手机，并充满寓意地写道：“太太知道我喜欢‘黄色’！好开心好感恩。以后会借此好好记下有意义的人和事。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 7:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11773167.md#1" target="_blank">大陆高校强化政治课 学生考不过不让毕业</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11773167.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/VCG111111852957-150x120.jpg" align ="left"></a>中共不断对各地高校学生加大“洗脑”力度，强制要求学生参加一些政治必修课，逃课的学生会被列入黑名单；考试不及格的将无法获取毕业证。对此，学生感叹：浪费时间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 6:45 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772898.md#1" target="_blank">为华为生产产品 航天科工旗下企业违约45亿</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772898.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/019-12-05.08-150x120.jpg" align ="left"></a>大陆媒体1月6日再次报导航天通信旗下子公司违约造假事件，同一天曝光的大陆股民2019年每月投诉最多企业的名单中，航天通信在10月和11月都名列榜首。航天通信自曝造假的背后，是与华为的密切合作，并被曝海外客户终止与其合作。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 6:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772974.md#1" target="_blank">【新闻看点】武汉肺炎蔓延 真正可怕的未排除</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772974.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages22-1881582-150x120.jpg" align ="left"></a>截止到今天（1月6日）中午12点，过去24小时当中，香港已经接受了6名曾到访过武汉，并出现发烧、呼吸道感染或肺炎症状的病人，累计达到了21宗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 5:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11773097.md#1" target="_blank">金球奖首位华裔影后 林家珍获喜剧最佳女主角</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11773097.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1191981271-150x120.jpg" align ="left"></a>第77届金球奖颁奖典礼5日晚举行，31岁的华裔女演员林家珍（Nora Lum，艺名Awkwafina）以出演《告别》（Farewell），获喜剧类最佳女主角奖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 5:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772655.md#1" target="_blank">【新闻看点】习突换人 骆惠宁记者会为何颤抖</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772655.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Untitled1-1-150x120.jpg" align ="left"></a>新年伊始，中共官场爆出了第一个轰动性的消息。王志民卷铺盖走人了，骆惠宁今天（1月6日）正式出任香港中联办主任一职。对骆惠宁来说，从封疆大吏转任香港，压力应该是不小，以至于他在会见媒体时神情紧张，双腿不停颤抖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 5:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772996.md#1" target="_blank">东北13岁女生校内扫雪3小时 手冻伤或截肢</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772996.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2-3-150x120.png" align ="left"></a>在黑龙江安达市太平庄镇中学组织的近三个小时扫雪过程中， 13岁初中生鲁岩岩手指被严重冻伤，医生说，不排除截肢的可能性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 5:06 AM							</td></tr>
@@ -18,13 +25,6 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770899.md#1" target="_blank">大陆又一平台爆雷 涉资千亿 近二百万人受害</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770899.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/IMG_5395-150x120.jpg" align ="left"></a>近来，大陆普顿PTFX外汇平台崩盘的消息，震动了整个外汇圈。据悉，该平台涉及资金近千亿人民币，200多万投资者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 5:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771337.md#1" target="_blank">受降雪影响 大陆131条高速135个路段封闭</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771337.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1191956262-150x120.jpg" align ="left"></a>1月6日，因降雪影响，大陆131条高速135个路段封闭，波及北京、天津、河北、山西、陕西、内蒙古。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 4:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771579.md#1" target="_blank">武汉不明肺炎延烧 泰国菲律宾加强检测旅客</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771579.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-150x120.jpg" align ="left"></a>武汉不明肺炎疫情持续扩散，为此亚洲各国均采取因应措施。泰国疾病管制局和泰国机场公司合作在机场加装红外线温度扫描机，并加强对来自中国武汉的旅客检查措施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 3:39 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770622.md#1" target="_blank">【内幕】谍影重重 中共利用赴美游客窃密</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770622.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1125947391-150x120.jpg" align ="left"></a>2019年6月28日，中国公民李青山（Qingshan Li，音译）乘坐飞机降落在南加州，他持旅游签证赴美，原定于10天后返国，但他最终在美国被逮捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 2:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771567.md#1" target="_blank">陆搬家公司不让澳记者带走地球仪 原因荒谬</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771567.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_69075566_Subscription_L-150x120.jpg" align ="left"></a>澳洲一名记者结束在中国的工作，准备搬家回国，但搬家公司不让她带走一个地球仪，只因为地球仪上标示台北和北京的字体一样大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 2:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771039.md#1" target="_blank">南阳地震是模拟地震？ 网友疑与石油勘测有关</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771039.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/4b2c241065020360c2f889562da42585-150x120.jpg" align ="left"></a>1月6日凌晨2时，河南南阳市新野县（疑爆）发生2.1级地震，震源深度0千米。有网民质疑与石油勘测有关。但中共南阳市应急管理局称此次疑爆系相关部门模拟地震行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 1:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770942.md#1" target="_blank">北京最大积雪8厘米 105航班取消高速路封闭</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770942.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1191956262-150x120.jpg" align ="left"></a>1月6日，北京因降雪影响，首都机场取消105架次航班，首都机场省际巴士全部线路停运，京津城际、京沪、京张、京广等高铁线路降速运行，京藏、京承、首环等十条高速部分路段临时封闭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 12:28 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770615.md#1" target="_blank">【拍案惊奇】解密：苏莱曼尼之死与美伊战争</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770615.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NF0C3-1-600x400-1-150x120.jpg" align ="left"></a>这个周末，发生的事件比较多  包括美国跟伊朗之间的紧张对峙，武汉肺炎继续蔓延，中联办主任王志民被撤换，等等。每一件事细谈起来都很长，我们今天先聚焦在美伊对峙。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 11:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770292.md#1" target="_blank">苏州十全街发生大面积塌陷 店铺已搬空</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770292.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shijie-150x120.jpg" align ="left"></a>1月4日下午，苏州知名的十全街突然发生大面积地面塌陷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770074.md#1" target="_blank">整顿港澳系统 张晓明或是下一个？</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770074.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/130716094605100590-150x120.jpg" align ="left"></a>北京周六（1月4日）突然宣布撤换中联办主任王志民，由65岁的财经委副主任委骆惠宁接任。有多名政界中人指出，相信骆只是过渡性人物，此次任免或是中共整顿港澳系统的开始。港澳办主任张晓明，很有可能是下一个被撤换的人；至于特首林郑月娥，亦官位难保。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772269.md#1" target="_blank">被埋37天 广州地陷埋3人仅搜出1人遗体</a><br></h3>1月6日，广东广州地铁施工区上月塌陷的地方，搜寻人员找寻到一具失踪人员遗体。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770883.md#1" target="_blank">【翻墙必看】分析：王志民突然被撤职内幕</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
