--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/28/n11751179.md#1" target="_blank">安徽合肥三位医护人员经历的残酷迫害</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/28/n11751179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-22-150x120.jpg" align ="left"></a>在中共对法轮功持续20年的迫害中，不计其数的法轮功学员因为不放弃修炼，惨遭中共的迫害，身心受到巨大的伤害，甚至失去生命。本文所讲述的安徽省合肥地区三位修炼法轮功的医护人员的遭遇，只是无数法轮功学员被迫害事实的冰山一角。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:04 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/28/n11751497.md#1" target="_blank">法轮功学员柳德玉遭范家台监狱迫害致肺结核</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/28/n11751497.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2010-12-3-minghui-persecution-shayang1-150x120.jpg" align ="left"></a>湖北省荆门市法轮功学员柳德玉于2018年10月被劫持到湖北沙洋范家台监狱，因坚持信仰，被迫害得骨瘦如柴，患了肺结核，现一直在沙洋监狱住院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 9:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770375.md#1" target="_blank">山东维权人士在美遭中共威胁 其父国内被拘</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Iq9RdkRd-150x120.jpg" align ="left"></a>周四（1月2日），山东维权人士界立建的父亲突遭县国保抓捕、羞辱，被拘留。此前，界立建收到来自中共人士的威胁电话，他对中共这种不人道的无耻行径表示谴责，呼吁外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770649.md#1" target="_blank">大陆网友填歌赞川普：全世界的好公仆</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770649.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1189870194-150x120.jpg" align ="left"></a>美国总统川普（特朗普）授命美军击毙伊朗恐怖分子头目索莱马尼（Qassim Soleimani），不少带网友发声表支持，甚至传唱歌曲赞川普，但很快被删除。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770031.md#1" target="_blank">获悉陈豪刚从武汉返港 李佳芯活动上大惊失色</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770031.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/180425074841100311-150x120.jpg" align ="left"></a>刚从爆发不明肺炎的湖北武汉返家的港星陈豪，4日晚与李佳芯（Ali）一同应邀参加香港的慈善活动。被问到会否担心被传染病症时，Ali表示：“怕啊！”被工作人员要求合照时，李佳芯背对陈豪保持距离。而当陈豪手搭Ali肩膀时，Ali搞笑喊道：“我是来做慈善的，不要传染（病毒）给我啊！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770148.md#1" target="_blank">范冰冰亮相美食节 遇见人生中两位重要人物</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770148.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-957419286-150x120.jpg" align ="left"></a>1月4日，大陆女星范冰冰身着青绿色的杉装、搭配一条粉色的羽毛披风亮相某美食节。不过，活动的焦点并不是范冰冰清新时尚的服装，而是她遇见了人生中的两位重要人物——电影导演李玉和王小帅。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:27 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770242.md#1" target="_blank">在美产子引爱国争议 章子怡发文分享哺乳经验</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770242.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/GettyImages-1145327667-150x120.jpg" align ="left"></a>与歌手汪峰结婚五年的大陆女星章子怡，1月3日在微博宣布新年第一天产下二胎，凑成“好字”。据网民爆料，此次章子怡是在美国加州的霍格（Hoag）产子，意外引发“不爱国”话题。面对争议，四年前就在美国生下女儿的章子怡选择5日在微博发文分享哺乳经验。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 8:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770330.md#1" target="_blank">王志民成最短命中联办主任 香港政策有变？</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001010413172188-150x120.jpg" align ="left"></a>2020年元旦香港超过百万人上街反抗中共暴政，港警借口银行玻璃被砸“腰斩”游行活动，并逮捕了400多人。三日后，中联办主任王志民被免职，使他成为香港史上该职务任期最短的官员。中共采用了反常规做法安排继任者，令外界舆论聚焦香港政策是否有大的变化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 7:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/23/n11740764.md#1" target="_blank">深圳高楼背后的血泪：湖南工人失去了肺</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/23/n11740764.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1074345276-150x120.jpg" align ="left"></a>当他们浇筑高楼大厦的地基时，花岗岩粉尘也渗入了他们的胸膛。十多年后他们的双肺变得僵硬，他们会因呼吸困难气绝而终，没人关心他们的求救，而中国尘肺病人还在增加。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 5:36 AM							</td></tr>
@@ -18,7 +24,6 @@
 公开信由无锡陶国芬发起，截至目前已有蒋子春、周荣清、毛黎惠、黄菡清…等二十六人签名联署支持。目前联署活动还在进行中。
 给新市委书记黄钦的公开信
 公开信讲述他们因被非法强拆，财产被抢劫一空，无.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:45 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769044.md#1" target="_blank">武汉不明肺炎快速蔓延 香港再增6宗病例</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769044.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages22-1881582-150x120.jpg" align ="left"></a>湖北武汉“不明原因肺炎”持续蔓延，香港再新增6宗曾经到武汉，返港后出现肺炎等症状的病例。截止1月5日，香港累计病例达到14宗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770245.md#1" target="_blank">河南新野县疑发生爆炸 引发2.1级地震</a><br></h3>据中国地震台网测定，1月6日凌晨2时在河南南阳市新野县（北纬32.45度，东经112.50度）发生2.1级地震（疑爆），震源深度0千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 3:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/22/n11738876.md#1" target="_blank">被打残 辽宁法轮功学员李亚君再遭迫害</a><br></h3>10年前在拘留所被打残的凌源法轮功学员李亚君于2019年7月5日，被凌源市国保警察连抬带拽塞进轿车，送到朝阳市看守所，被拒收。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 10:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11768620.md#1" target="_blank">【翻墙必看】恐怖组织头子被击毙细节曝光</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
@@ -33,10 +38,5 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769311.md#1" target="_blank">新年刚过 陕西连发两起杀人案 致4死1伤</a><br></h3>2020年新年刚过，陕西传出两起杀人案。1月2日，陕西西安市第66中学女教师周某娟被高三学生李某伤害致死。1月4日，汉中市宁强县，男子徐某林将王某、雷某杰杀死，将9岁女童王某彤致伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:19 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11769417.md#1" target="_blank">因应武汉肺炎 香港启动“严重应变级别”</a><br></h3>武汉爆发疑似萨斯疫情，大陆社交媒体疯传后官方再补发公告，短短三天个案从27例飙升44例。香港近期到过武汉后发热、呼吸道感染及肺炎症状入院治疗有8人。港澳应对升级，香港启动“严重应变级别”。专家批北京政府处理失当，后果严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11768943.md#1" target="_blank">安徽淮南男子杀害女友藏尸行李箱 被判死刑</a><br></h3>近日，安徽淮南男子刘某杀害女友藏尸行李箱一案宣判，刘某一审被判处死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:55 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11768961.md#1" target="_blank">广东新生女婴被装袋挂公厕门把手 父母失踪</a><br></h3>1月1日，广东省梅州市一个公厕里，有民众发现厕所的门把手上挂着一袋东西，里面竟装着一个熟睡的小女婴。袋中还有一件成人衣服，但没有任何关于女婴信息的字条。经检查，女婴没有任何异常，身体也无畸形情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 3:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11768891.md#1" target="_blank">四川青样一住宅天然气泄漏起火 地面都震动</a><br></h3>1月4日深夜，四川成都青羊区一住宅小区天然气泄漏起火，并伴随爆炸声，导致1人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 2:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11768811.md#1" target="_blank">因手机被没收 西安高中生将老师杀害</a><br></h3>1月2日，陕西省西安市第66中学发生一起刑事案件，该校女教师周某娟被高三学生李某伤害致死。据了解，李某因在晚自习期间玩手机，被值班老师金某发现并予以没收。李某两次索要手机无果，在第三次进到办公室后，将另一名老师周某娟伤害致死，之后李某翻出学校大门逃离。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 1:17 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11768650.md#1" target="_blank">珠海发生3.5级地震 香港多区市民被震醒</a><br></h3>1月5日早晨，广东省珠海市香洲区，发生3.5级地震。香港、澳门均有震感，香港多区市民表示震感明显，有人被震醒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 12:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11768659.md#1" target="_blank">每日三退声明精选（2020/01/04）</a><br></h3>这里是被中共统治的中国。这个党告诉世人，他是真理的惟一标准，他是中国的救星，人民的领导者...... 但是他不是伟大的上帝，而是一个以一个个谎言荼毒像你一像天真可爱的孩子的骗子，以一场场血腥暴力摧毁每一个中国人的生命的匪帮。 孩子，对不起，我们没能让你迁离这片多灾多难的土地，没能让你在理想的环境下生活。我们十多年前也没看清中共邪恶的一面，加入了中共党团队，这.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 11:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kuujke2745/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kuujke2745/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
